--- a/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
@@ -39,6 +39,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Agency.cs" />
+    <Compile Include="Core\Maps\AgencyMap.cs" />
+    <Compile Include="Parsers\AgencyParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
