--- a/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
@@ -71,6 +71,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Fixtures\AgencyParserFixture.cs" />
     <Compile Include="Tests\AgencyParserTest.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -141,9 +142,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Fixtures\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Project.GtfsNet\Project.GtfsNet.csproj">
       <Project>{29421eb2-5e0e-4345-9423-8d7b9dbffc35}</Project>
