Introduced a class fixture to optimize the test.

--- a/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Fixtures\AgencyParserFixture.cs" />
     <Compile Include="Tests\AgencyParserTest.cs" />
     <Compile Include="Tests\ParserTestBase.cs" />
+    <Compile Include="Fixtures\StopsParserFixture.cs" />
     <Compile Include="Tests\StopsParserTest.cs" />
   </ItemGroup>
   <ItemGroup>
