Trips.txt now can be parsed.

--- a/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Tests\ParserTestBase.cs" />
     <Compile Include="Tests\RoutesParserTest.cs" />
     <Compile Include="Tests\StopsParserTest.cs" />
+    <Compile Include="Tests\TripsParserTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
