--- a/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
@@ -50,10 +50,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Agency.cs" />
+    <Compile Include="Entities\Maps\TripsMap.cs" />
+    <Compile Include="Enums\WheelchairAccessibilityType.cs" />
+    <Compile Include="Enums\DirectionType.cs" />
     <Compile Include="Entities\Maps\AgencyMap.cs" />
     <Compile Include="Entities\Maps\RoutesMap.cs" />
     <Compile Include="Entities\Maps\StopsMap.cs" />
     <Compile Include="Entities\Routes.cs" />
+    <Compile Include="Entities\Trips.cs" />
     <Compile Include="Enums\RouteType.cs" />
     <Compile Include="Entities\Stops.cs" />
     <Compile Include="Enums\LocationType.cs" />
