--- a/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
@@ -72,7 +72,9 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\AgencyParserTest.cs" />
+    <Compile Include="Tests\CalendarDatesParserTest.cs" />
     <Compile Include="Tests\CalendarParserTest.cs" />
+    <Compile Include="Tests\DateTimeParserTest.cs" />
     <Compile Include="Tests\ParserTestBase.cs" />
     <Compile Include="Tests\RoutesParserTest.cs" />
     <Compile Include="Tests\StopsParserTest.cs" />
