--- a/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
@@ -52,6 +52,9 @@
     <Compile Include="Entities\Agency.cs" />
     <Compile Include="Entities\Calendar.cs" />
     <Compile Include="Entities\CalendarDates.cs" />
+    <Compile Include="Entities\FareAttributes.cs" />
+    <Compile Include="Entities\Maps\FareAttributesMap.cs" />
+    <Compile Include="Enums\PaymentMethodType.cs" />
     <Compile Include="Enums\ExceptionType.cs" />
     <Compile Include="Entities\Maps\CalendarDatesMap.cs" />
     <Compile Include="Entities\Maps\CalendarMap.cs" />
