--- a/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Entities\FareRules.cs" />
     <Compile Include="Entities\Maps\FareAttributesMap.cs" />
     <Compile Include="Entities\Maps\FareRulesMap.cs" />
+    <Compile Include="Entities\Maps\ShapesMap.cs" />
+    <Compile Include="Entities\Shapes.cs" />
     <Compile Include="Enums\PaymentMethodType.cs" />
     <Compile Include="Enums\ExceptionType.cs" />
     <Compile Include="Entities\Maps\CalendarDatesMap.cs" />
