--- a/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
@@ -54,8 +54,10 @@
     <Compile Include="Entities\CalendarDates.cs" />
     <Compile Include="Entities\FareAttributes.cs" />
     <Compile Include="Entities\FareRules.cs" />
+    <Compile Include="Entities\Frequencies.cs" />
     <Compile Include="Entities\Maps\FareAttributesMap.cs" />
     <Compile Include="Entities\Maps\FareRulesMap.cs" />
+    <Compile Include="Entities\Maps\FrequenciesMap.cs" />
     <Compile Include="Entities\Maps\ShapesMap.cs" />
     <Compile Include="Entities\Shapes.cs" />
     <Compile Include="Enums\PaymentMethodType.cs" />
