--- a/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Tests\ShapesParserTest.cs" />
     <Compile Include="Tests\StopsParserTest.cs" />
     <Compile Include="Tests\StopTimesParser.cs" />
+    <Compile Include="Tests\TransfersParserTest.cs" />
     <Compile Include="Tests\TripsParserTest.cs" />
   </ItemGroup>
   <ItemGroup>
