Added support for testing "feed_info.txt"

--- a/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Tests\DateTimeParserTest.cs" />
     <Compile Include="Tests\FareAttribributesParserTest.cs" />
     <Compile Include="Tests\FareRulesParserTest.cs" />
+    <Compile Include="Tests\FeedInfoParserTest.cs" />
     <Compile Include="Tests\FrequenciesParserTest.cs" />
     <Compile Include="Tests\ParserTestBase.cs" />
     <Compile Include="Tests\RoutesParserTest.cs" />
