--- a/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Tests\CalendarDatesParserTest.cs" />
     <Compile Include="Tests\CalendarParserTest.cs" />
     <Compile Include="Tests\DateTimeParserTest.cs" />
+    <Compile Include="Tests\EntityParserFactoryTest.cs" />
     <Compile Include="Tests\FareAttribributesParserTest.cs" />
     <Compile Include="Tests\FareRulesParserTest.cs" />
     <Compile Include="Tests\FeedInfoParserTest.cs" />
