--- a/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Entities\FareRules.cs" />
     <Compile Include="Entities\FeedInfo.cs" />
     <Compile Include="Entities\Frequencies.cs" />
+    <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Entities\Maps\FareAttributesMap.cs" />
     <Compile Include="Entities\Maps\FareRulesMap.cs" />
     <Compile Include="Entities\Maps\FeedInfoMap.cs" />
@@ -86,6 +87,8 @@
     <Compile Include="Enums\LocationType.cs" />
     <Compile Include="Parsers\DateTimeParser.cs" />
     <Compile Include="Parsers\EntityParser.cs" />
+    <Compile Include="Parsers\EntityParserFactory.cs" />
+    <Compile Include="Parsers\IEntityParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
