--- a/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
@@ -51,20 +51,21 @@
   <ItemGroup>
     <Compile Include="Entities\Agency.cs" />
     <Compile Include="Entities\Calendar.cs" />
-    <Compile Include="Entities\CalendarDates.cs" />
-    <Compile Include="Entities\FareAttributes.cs" />
-    <Compile Include="Entities\FareRules.cs" />
+    <Compile Include="Entities\CalendarDate.cs" />
+    <Compile Include="Entities\FareAttribute.cs" />
+    <Compile Include="Entities\FareRule.cs" />
     <Compile Include="Entities\FeedInfo.cs" />
-    <Compile Include="Entities\Frequencies.cs" />
+    <Compile Include="Entities\Frequency.cs" />
     <Compile Include="Entities\IEntity.cs" />
+    <Compile Include="Entities\IVisitor.cs" />
     <Compile Include="Entities\Maps\FareAttributesMap.cs" />
     <Compile Include="Entities\Maps\FareRulesMap.cs" />
     <Compile Include="Entities\Maps\FeedInfoMap.cs" />
     <Compile Include="Entities\Maps\FrequenciesMap.cs" />
     <Compile Include="Entities\Maps\ShapesMap.cs" />
     <Compile Include="Entities\Maps\TransfersMap.cs" />
-    <Compile Include="Entities\Shapes.cs" />
-    <Compile Include="Entities\Transfers.cs" />
+    <Compile Include="Entities\Shape.cs" />
+    <Compile Include="Entities\Transfer.cs" />
     <Compile Include="Enums\TransferType.cs" />
     <Compile Include="Enums\PaymentMethodType.cs" />
     <Compile Include="Enums\ExceptionType.cs" />
@@ -74,16 +75,16 @@
     <Compile Include="Enums\DropOffType.cs" />
     <Compile Include="Entities\Maps\TripsMap.cs" />
     <Compile Include="Enums\PickupType.cs" />
-    <Compile Include="Entities\StopTimes.cs" />
+    <Compile Include="Entities\StopTime.cs" />
     <Compile Include="Enums\WheelchairAccessibilityType.cs" />
     <Compile Include="Enums\DirectionType.cs" />
     <Compile Include="Entities\Maps\AgencyMap.cs" />
     <Compile Include="Entities\Maps\RoutesMap.cs" />
     <Compile Include="Entities\Maps\StopsMap.cs" />
-    <Compile Include="Entities\Routes.cs" />
-    <Compile Include="Entities\Trips.cs" />
+    <Compile Include="Entities\Route.cs" />
+    <Compile Include="Entities\Trip.cs" />
     <Compile Include="Enums\RouteType.cs" />
-    <Compile Include="Entities\Stops.cs" />
+    <Compile Include="Entities\Stop.cs" />
     <Compile Include="Enums\LocationType.cs" />
     <Compile Include="Parsers\DateTimeParser.cs" />
     <Compile Include="Parsers\EntityParser.cs" />
