--- a/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
@@ -72,6 +72,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\Entities\AgencyEqualityTest.cs" />
     <Compile Include="Tests\Parsers\AgencyParserTest.cs" />
     <Compile Include="Tests\Parsers\CalendarDatesParserTest.cs" />
     <Compile Include="Tests\Parsers\CalendarParserTest.cs" />
