--- a/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Tests\Entities\CalendarEqualityTest.cs" />
     <Compile Include="Tests\Entities\FareAttributeEqualityTest.cs" />
     <Compile Include="Tests\Entities\FareRuleEqualityTest.cs" />
+    <Compile Include="Tests\Entities\FeedInfoEqualityTest.cs" />
     <Compile Include="Tests\Parsers\AgencyParserTest.cs" />
     <Compile Include="Tests\Parsers\CalendarDatesParserTest.cs" />
     <Compile Include="Tests\Parsers\CalendarParserTest.cs" />
