Frequency implements IEqualityComparer

--- a/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Tests\Entities\FareAttributeEqualityTest.cs" />
     <Compile Include="Tests\Entities\FareRuleEqualityTest.cs" />
     <Compile Include="Tests\Entities\FeedInfoEqualityTest.cs" />
+    <Compile Include="Tests\Entities\FrequencyEqualityTest.cs" />
     <Compile Include="Tests\Parsers\AgencyParserTest.cs" />
     <Compile Include="Tests\Parsers\CalendarDatesParserTest.cs" />
     <Compile Include="Tests\Parsers\CalendarParserTest.cs" />
