--- a/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Tests\Entities\FareRuleEqualityTest.cs" />
     <Compile Include="Tests\Entities\FeedInfoEqualityTest.cs" />
     <Compile Include="Tests\Entities\FrequencyEqualityTest.cs" />
+    <Compile Include="Tests\Entities\RouteEqualityTest.cs" />
     <Compile Include="Tests\Parsers\AgencyParserTest.cs" />
     <Compile Include="Tests\Parsers\CalendarDatesParserTest.cs" />
     <Compile Include="Tests\Parsers\CalendarParserTest.cs" />
