Transfer implements IEqualityComparer

--- a/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Tests\Entities\ShapeEqualityTest.cs" />
     <Compile Include="Tests\Entities\StopEqualityTest.cs" />
     <Compile Include="Tests\Entities\StopTimeEqualityTest.cs" />
+    <Compile Include="Tests\Entities\TransferEqualityTest.cs" />
     <Compile Include="Tests\Parsers\AgencyParserTest.cs" />
     <Compile Include="Tests\Parsers\CalendarDatesParserTest.cs" />
     <Compile Include="Tests\Parsers\CalendarParserTest.cs" />
