--- a/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Tests\Parsers\FareRulesParserTest.cs" />
     <Compile Include="Tests\Parsers\FeedInfoParserTest.cs" />
     <Compile Include="Tests\Parsers\FrequenciesParserTest.cs" />
+    <Compile Include="Tests\Parsers\GtfsFeedParserTest.cs" />
     <Compile Include="Tests\Parsers\ParserTestBase.cs" />
     <Compile Include="Tests\Parsers\RoutesParserTest.cs" />
     <Compile Include="Tests\Parsers\ShapesParserTest.cs" />
