Reimplemented GtfsFeedParser as a facade for GtfsFeedParserVisitor

--- a/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
@@ -107,7 +107,7 @@
     <Compile Include="Parsers\GtfsFeedParser.cs" />
     <Compile Include="Parsers\IEntityParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Visitors\GtfsFeedVisitor.cs" />
+    <Compile Include="Visitors\GtfsFeedParserVisitor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
