--- a/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Tests\Parsers\StopTimesParser.cs" />
     <Compile Include="Tests\Parsers\TransfersParserTest.cs" />
     <Compile Include="Tests\Parsers\TripsParserTest.cs" />
+    <Compile Include="Visitors\RequiredFileVisitorTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="feeds\lirr\agency.txt">
