Created initial implementation of "RequiredFileVisitor"

--- a/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet/Project.GtfsNet.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Parsers\IEntityParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Visitors\GtfsFeedParserVisitor.cs" />
+    <Compile Include="Visitors\RequiredFileVisitor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
