--- a/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Test/Project.GtfsNet.Test.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Tests\Entities\StopTimeEqualityTest.cs" />
     <Compile Include="Tests\Entities\TransferEqualityTest.cs" />
     <Compile Include="Tests\Entities\TripEqualityTest.cs" />
+    <Compile Include="Tests\GtfsFeedValidatorTest.cs" />
     <Compile Include="Tests\Parsers\AgencyParserTest.cs" />
     <Compile Include="Tests\Parsers\CalendarDatesParserTest.cs" />
     <Compile Include="Tests\Parsers\CalendarParserTest.cs" />
