Installed Xunit runner and removed an unused reference from "GtfsFeedValidator"

--- a/Project.Gtfs.Net/Project.GtfsNet/packages.config
+++ b/Project.Gtfs.Net/Project.GtfsNet/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CsvHelper" version="2.13.2.0" targetFramework="net452" />
   <package id="Ensure.That" version="3.2.0" targetFramework="net452" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net452" />
 </packages>
