--- a/Project.Gtfs.Net/Project.GtfsNet.Demo/Project.GtfsNet.Demo.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Demo/Project.GtfsNet.Demo.csproj
@@ -40,6 +40,14 @@
       <HintPath>..\packages\CsvHelper.2.13.2.0\lib\net40-client\CsvHelper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="GTFS, Version=0.0.3.57, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\GTFS.0.0.3.57\lib\GTFS.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="GTFS.IO, Version=0.0.3.57, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\GTFS.0.0.3.57\lib\GTFS.IO.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -137,6 +145,12 @@
     <Content Include="feeds\subway\trips.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Project.GtfsNet\Project.GtfsNet.csproj">
+      <Project>{29421eb2-5e0e-4345-9423-8d7b9dbffc35}</Project>
+      <Name>Project.GtfsNet</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
