--- a/Project.Gtfs.Net/Project.GtfsNet.Demo/packages.config
+++ b/Project.Gtfs.Net/Project.GtfsNet.Demo/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CsvHelper" version="2.13.2.0" targetFramework="net452" />
+  <package id="GTFS" version="0.0.3.57" targetFramework="net452" />
 </packages>
