--- a/Project.Gtfs.Net/Project.GtfsNet/packages.config
+++ b/Project.Gtfs.Net/Project.GtfsNet/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CreateNewNuGetPackageFromProjectAfterEachBuild" version="1.8.8" targetFramework="net452" developmentDependency="true" />
   <package id="CsvHelper" version="2.13.2.0" targetFramework="net452" />
   <package id="Ensure.That" version="3.2.0" targetFramework="net452" />
   <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net452" />
