--- a/Project.Gtfs.Net/Project.GtfsNet.Demo/GtfsNet.Demo.csproj
+++ b/Project.Gtfs.Net/Project.GtfsNet.Demo/GtfsNet.Demo.csproj
@@ -147,9 +147,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Project.GtfsNet\Project.GtfsNet.csproj">
+    <ProjectReference Include="..\Project.GtfsNet\GtfsNet.csproj">
       <Project>{29421eb2-5e0e-4345-9423-8d7b9dbffc35}</Project>
-      <Name>Project.GtfsNet</Name>
+      <Name>GtfsNet</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
